Late night commit

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script>
-    new WOW().init();
+    wow = new WOW({
+      mobile: false
+    });
+    wow.init();
   </script>
 
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
